infrastructure/services/airflow/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    service: airflow
